syntax = "proto3";
option java_package = "ca.NetSysLab.ProtocolBuffers";
option java_outer_classname = "KeyValueRequest";

message KVRequest {
    uint32 command = 1;
    optional bytes key = 2;
    optional bytes value = 3;
    optional int32 version = 4;
    repeated uint64 heartbeat = 5;
    optional KeyValueEntry pair = 6;
    optional uint32 recoveredNodeId = 7;
    repeated HashRange hashRanges = 8;
    optional int64 R_TS = 9;
}

message KeyValueEntry {
    bytes key = 1;
    int32 version = 2;
    bytes value = 3;
    int64 R_TS = 4;
    int64 W_TS = 5;
}

message HashRange {
    int32 minRange = 1;
    int32 maxRange = 2;
}