syntax = "proto3";

option java_package = "ca.NetSysLab.ProtocolBuffers";
option java_outer_classname = "Message";

message Msg {
    bytes messageID = 1;
    bytes payload = 2;
    fixed64 checkSum = 3;
    optional bytes clientAddress = 4;
    optional int32 clientPort = 5;
    optional int32 hintedNodeId = 6;
}
